[gd_scene load_steps=11 format=3 uid="uid://dfvg8d0vhh3rw"]

[ext_resource type="Script" path="res://entities/entity.gd" id="1_7fmso"]
[ext_resource type="Script" path="res://entities/controllers/AIController.gd" id="2_3jiud"]
[ext_resource type="Script" path="res://entities/behaviors/wander.gd" id="3_ki6lm"]
[ext_resource type="Script" path="res://entities/behaviors/chase.gd" id="4_53kue"]
[ext_resource type="Texture2D" uid="uid://c4hluuy7aj8jl" path="res://icon.svg" id="5_pw2lb"]
[ext_resource type="Script" path="res://entities/vision.gd" id="6_a4dsu"]
[ext_resource type="Script" path="res://entities/controllers/controller_debugger.gd" id="7_tujkl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ihvhq"]
radius = 59.0762

[sub_resource type="CircleShape2D" id="CircleShape2D_ohftr"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o7fjc"]
radius = 100.0

[node name="Frog" type="Node2D"]
script = ExtResource("1_7fmso")
wander_speed = 600.0
dash_speed = 600.0
dash_length_s = 10.0
vision_radius = 600.0
food_amount = 10.0

[node name="Controller" type="Node" parent="."]
script = ExtResource("2_3jiud")

[node name="Wander" type="Node" parent="Controller"]
script = ExtResource("3_ki6lm")

[node name="Chase" type="Node" parent="Controller"]
script = ExtResource("4_53kue")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.290196, 0.231373, 1)
scale = Vector2(0.609375, 0.609375)
texture = ExtResource("5_pw2lb")

[node name="Body" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource("CircleShape2D_ihvhq")

[node name="FoodDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("6_a4dsu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FoodDetector"]
shape = SubResource("CircleShape2D_ohftr")

[node name="ThreatDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("6_a4dsu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThreatDetector"]
shape = SubResource("CircleShape2D_o7fjc")

[node name="Debugger" type="Label" parent="."]
z_index = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 15.0
offset_right = 40.0
offset_bottom = 38.0
grow_horizontal = 2
text = "BEHAVIOR"
horizontal_alignment = 1
script = ExtResource("7_tujkl")

[connection signal="area_entered" from="Body" to="." method="_eat"]
[connection signal="closer_target_detected" from="FoodDetector" to="Controller/Chase" method="_on_trigger"]
[connection signal="no_target_detected" from="FoodDetector" to="Controller/Chase" method="_on_untrigger"]
